# Minecraft-Console-Client

./: .gitignore  Cargo.toml  README.md
src/: authentication.rs  cache.rs  config.rs  delete.rs  get_server_info.rs  main.rs
src/protocol/: mod.rs  packet.rs
src/protocol/encoding/: mod.rs  string.rs  var_int.rs
src/protocol/packets/: handshake.rs  mod.rs  status.rs
